# ChangeLog for sys-libs/libsepol
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/libsepol/ChangeLog,v 1.52 2012/11/17 16:56:46 swift Exp $

  17 Nov 2012; <swift@gentoo.org> libsepol-2.1.8.ebuild:
  Stabilization

  13 Oct 2012; <swift@gentoo.org> libsepol-2.1.8.ebuild:
  Supporting user-provided patches using epatch_user

*libsepol-2.1.8 (09 Oct 2012)

  09 Oct 2012; <swift@gentoo.org> +libsepol-2.1.8.ebuild:
  Introducing upstream release

  03 Oct 2012; Mike Frysinger <vapier@gentoo.org> libsepol-2.1.4-r1.ebuild:
  Update to EAPI=4.

  13 May 2012; <swift@gentoo.org> -libsepol-2.1.0.ebuild:
  Removing obsoleted ebuild

  29 Apr 2012; <swift@gentoo.org> libsepol-2.1.4-r1.ebuild:
  Stabilization

*libsepol-2.1.4-r1 (31 Mar 2012)

  31 Mar 2012; <swift@gentoo.org> +libsepol-2.1.4-r1.ebuild,
  +files/libsepol-2.1.4-fix_role_fix_callback.patch:
  Bump to version 2.1.4

  12 Nov 2011; <swift@gentoo.org> -libsepol-2.0.41.ebuild,
  -libsepol-2.0.42.ebuild:
  removing deprecated ebuilds

  23 Oct 2011; <swift@gentoo.org> libsepol-2.1.0.ebuild:
  Stabilization (tracker #384231)

  12 Aug 2011; Anthony G. Basile <blueness@gentoo.org> -libsepol-2.0.32.ebuild,
  -files/libsepol-2.0.32-expand_rule.diff, -libsepol-2.0.37.ebuild:
  Removed deprecated versions

*libsepol-2.1.0 (03 Aug 2011)

  03 Aug 2011; Anthony G. Basile <blueness@gentoo.org> +libsepol-2.1.0.ebuild:
  Bump to 20110727 SELinux userspace release

*libsepol-2.0.42 (15 Jul 2011)

  15 Jul 2011; Anthony G. Basile <blueness@gentoo.org> +libsepol-2.0.42.ebuild:
  Bump to 2.0.42 - proxy for SwifT

  28 May 2011; Anthony G. Basile <blueness@gentoo.org> libsepol-2.0.32.ebuild,
  libsepol-2.0.37.ebuild:
  Make RDEPEND explicit

  28 May 2011; Anthony G. Basile <blueness@gentoo.org> libsepol-2.0.41.ebuild:
  Stable amd64 x86

  13 Feb 2011; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
  Updated metadata.xml to reflect new selinux herd.
