@@ -4,14 +4,16 @@ Hash: SHA256
 AUX libsepol-2.1.4-fix_role_fix_callback.patch 459 SHA256 fee102fdcf2e663c29deb12e4c6ee538d7607a5904f02459ff94b7489997c309 SHA512 b75610a35dd69b677be22296261fe7cac4f25226a0dbebf7a22fca1f249586acffd294aa32fc091695cbf9bde69882cfc269b5a41a649c7a39259fc945ea2b84 WHIRLPOOL 33c9ba3b4d4153fa63ddbbe1f581c2dd4b71af22428f9ff3fbfde79414fa07878aaee08097d1d71ea210209bd7aa92edbe8ba9bf3399e431ccfa19d0de25ab7f
 DIST libsepol-2.1.4.tar.gz 201713 SHA256 8f5ea42ae6cc00b21f0e5f31f354d19fcce3edfe9328971d266245718714b1e8 SHA512 3eba1b990ea0c69d1811efec72c407c4f80ffbddc5cefbce031af7ed74e6e7f5225b93435745c32e4d4f48b2b261838d0c84a913329e6e06aea5e8977be966bd WHIRLPOOL 61fe73340e5b738fae99fc5e7dfe7162b4ed2fe70eb254c5a6b67b424dfcdaf7a3f5a7b9a36beab86817623fdabf36017ea3d5455842bd9b3cb1a4ebb71ccf3e
 DIST libsepol-2.1.8.tar.gz 203545 SHA256 63eedd2e435658eedb14cf5eb803468b701f4a2404f1a4af4ab52858e9c068f0 SHA512 9e06f854b5d11dea016c8828616241dcbb44ec38afd0230399d1af788755e719d9ce98f6746d9080f3e389bd40194463a193fd6185a358ee0ccc8301865009ae WHIRLPOOL 7f12a0e7619146dc60390bb15146ad0dda4013c84c047dda310d68fb9a9d3d0d2d4fc089423c8f89dd73e516a30354aa00998ce42a3d8d32520c4617adbf1d6b
+DIST patchbundle-libsepol-2.1.8-r1.tar.gz 534 SHA256 3a2bcba0c797ac960eb3883bdd5f22ce294f3560df86de0c198bc90233e8e54a SHA512 3d4d0f340fd24d48a867490ae1e24dafe821f69d78e68b7cdf67a310f3f46a4c086129d04e6a6d13fa44768e9bad8c3320a4c97a8af8809606099a09b9ef8aec WHIRLPOOL 7f7021b872ab9264d4d2ec51ff55f880612d5252323e8691e1008fd2d0d31ff92a235f25bb7ebf8dabf6ea304485199b8c575b47781ac1354a55de1ef31356f0
 EBUILD libsepol-2.1.4-r1.ebuild 888 SHA256 188c2967d4e3fc7b59e2080d96f5a0ddf89b24fd1ac4ccd466bc94c35918952d SHA512 f94a13016114886b5e521760e12d1cc4ea00a731a242c9f91f42fa4cfec29abb1b69b80e940834a50890b9e1ebbb9362fb4e24b2c59bb6d814f8fa4131958440 WHIRLPOOL d0e046b834c970770cecc50a1208bd8f07754c2d7b4273a76ba35d3727eecdd0ef84e0dba4e39857d9d7440187977d00ceaecd11597e50ead69fce2469113b52
+EBUILD libsepol-2.1.8-r1.ebuild 1264 SHA256 2bab7db840c6462ae33739da5e13f27a8618b4a69e84a2432f97ca01301cf84d SHA512 63df08fce123a72e4703099db4820b2a6dae96132ece00e15725ce931dee90d880f10398aa629271140c2446b2dda9a67cf2eda223af98e3dda69413e35354fb WHIRLPOOL 0433750448e0e372b1e8eea76c0c1959aaaec949c63796e44bc85f7a7b03a71369746cefbf142dacfdd5899122b50c8deca64d05379d4624cb59d86e374838e6
 EBUILD libsepol-2.1.8.ebuild 1080 SHA256 56a91e00a3e7b0db02568a8ee5aa19b15d9180faa7cfd342e0c6b125b44185d9 SHA512 dd7b85650c125d24f236a982e1f4ef5222703bf29404e2e400933802665362d9d9bd1d57141f6f67d43e3ae411d3640b17f7425c5b4c5d741e5d7b7d7655edbb WHIRLPOOL 9092e4e729e2de5cd69e80e9306b9924db6ab1584cce441ca50082eee6c7474aba84f7ccdb60979ff8cc566e8a2e22f1458d6baca356948de82d160aba192609
-MISC ChangeLog 6968 SHA256 b108c8346d991ec7b7450a32b62d73cb4b391bd2d6692a157a65ccf2404520af SHA512 083d77741a6c0357282a97c9b537b525f663174cf15ec9f5bb912cb556f61e3ecedeec9198b549894f4540e3778619c1f24144529cea74de746329831a28a95f WHIRLPOOL f75063eb485ea87ba81f81389866aae14b01c06c01c6dab8d49da118833103acccbbc777e701e27a287be89159d57f19a91678b2d9f4b08de354d78d23352074
+MISC ChangeLog 7112 SHA256 88685ba4da71dfae91ad8487530b762799bbf02966bc0953adae34ebf3be8113 SHA512 96b5a45bbd6f492d537903354ebf29dbb2f0aebc5d87df6a15820d64d198b766587beba7ac0ba4c6ca1fdf5aa9c49703bb32841ab6e1f63393f6bc3d6b500dbf WHIRLPOOL 8868f92303c7bff927c4c09e7a768aa1628e9b07c41bf437e97a44a889a3c6e603fcde1f639cec005748b617b9850f75eb548123fe360264c181a46ddb58569e
 MISC metadata.xml 255 SHA256 34be115c595485e6f130e95be8e55b8cad13a3a80a04b538c42f3544ad0936c9 SHA512 91b84276affda6ab0bc9245150d8004517342b7fad0b2f2804bb71eb6f7ef519f4631a3202a0fa48158421f1197a3ae21f20dc7fe2ded22de32767047d51fc4e WHIRLPOOL eece77047bd215015bb84ffe8c01b657f1c363a337cd129cb4c666ee51ebb8e842101428c4a149bce99683dad69e5848366cca356c2b145be7b811c818010129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlCnwcUACgkQXfqz7M26L9s9hACgjNznzc1FJtDRiLk61UxUQI9J
-ttkAn3sXuOoTM9qgqWOLQqzRhahClKPv
-=GAvT
+iEUEAREIAAYFAlDE5DoACgkQXfqz7M26L9vQSgCXdlyjoiO6BE2ZZLG7PXV/IQ2U
+BACfZwVnBDNiJsj8XS9BJE6/2PrYOYM=
+=t9q6
 -----END PGP SIGNATURE-----
