@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/libsepol
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libsepol/ChangeLog,v 1.52 2012/11/17 16:56:46 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libsepol/ChangeLog,v 1.53 2012/12/09 19:19:26 swift Exp $
+
+*libsepol-2.1.8-r1 (09 Dec 2012)
+
+  09 Dec 2012; <swift@gentoo.org> +libsepol-2.1.8-r1.ebuild:
+  Adding proper RANLIB support, see bug #444374
 
   17 Nov 2012; <swift@gentoo.org> libsepol-2.1.8.ebuild:
   Stabilization
